collapse animation fix

--- a/kasa-project/src/stylesheets/collapse.scss
+++ b/kasa-project/src/stylesheets/collapse.scss
@@ -1,3 +1,13 @@
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 5px;
+}
+
 .collapse {
   width: calc(100% - 20px);
   height: 20px;
@@ -13,19 +23,19 @@
 }
 
 .collapse-body {
-  height: 0;
+  max-height: 0;
   opacity: 0;
   visibility: hidden;
-  transition: height 500ms 300ms ease-in-out, visibility 500ms ease-in-out, opacity 500ms ease-in-out;
+  transition: max-height 500ms 300ms ease-in-out, visibility 500ms ease-in-out, opacity 500ms ease-in-out;
   background-color: #F6F6F6;
   border-radius: 0 0 10px 10px;
   margin-bottom: 50px;
 }
 
 .collapse-body.is-active {
-  transition: height 500ms ease-in-out, visibility 500ms 300ms ease-in-out, opacity 500ms 300ms ease-in-out;
+  transition: max-height 500ms ease-in-out, visibility 500ms 300ms ease-in-out, opacity 500ms 300ms ease-in-out;
   visibility: visible;
-  height: 160px;
+  max-height: 280px;
   opacity: 1;
 }
 
